# vae4fashion

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  train_script.py  vae.ipynb
vae/: model.py
