[tool.poetry]
name = "vae4fashion"
version = "0.1.0"
description = "Variational autoencoder trainied on pieces of clothing."
authors = ["Egor_Osinkin <egor_osinkin@epam.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torchvision = "^0.13.0"
pytorch-lightning = "^1.6.4"
pytorch-lightning-bolts = "^0.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
jupyterlab = "^3.4.3"
jupyterlab-lsp = "^3.10.1"
python-lsp-server = {extras = ["python"], version = "^1.4.1"}
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
